[tool.poetry]
name = "walmart-store-sales-prediction"
version = "0.1.0"
description = ""
authors = ["Lucas Olini <lucasolini96@gmail.com>"]
readme = "README.md"
packages = [{include = "walmart_store_sales_prediction"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
mlflow = "^2.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
